# aiv-brainfuck

./: .gitignore  CMakeLists.txt  Makefile  Makefile.nmake  README.md
src/: brainfuck.c  brainfuck.h  main.c  sdl.c
tests/: tests.c
